@@ -262,7 +262,7 @@ $GLOBALS['TL_DCA']['tl_module']['fields']['iso_category_scope'] = array
 	'exclude'                 => true,
 	'inputType'               => 'radio',
 	'default'				  => 'current_category',
-	'options'				  => array('global', 'parent_and_first_child','parent_and_all_children', 'current_category'),
+	'options'				  => array('global', 'current_and_first_child','current_and_all_children', 'current_category', 'parent', 'product'),
 	'reference'				  => &$GLOBALS['TL_LANG']['tl_module']['iso_category_scope_ref'],
 );
 
