@@ -19,6 +19,8 @@ Version 0.2.0
 - Added italian translation for frontend information
 - Added option to "authorize" or "capture" transations for ePay payment modules
 - Added link to admin panel for ePay payment gateway
+- Added listing for "parent category" to product list
+- Added listing for "product categories" to product list
 - Fixed field tl_iso_rules.applyTo not visible in the palette
 - Fixed PayPal checkout not charging for shipping price
 - Fixed back button on attributes page (Ticket #259)
